--- a/404.html
+++ b/404.html
@@ -3,18 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>पेज सापडले नाही | 404 Error</title>
+    <title>404 Error</title>
 	
-    <link rel="icon" type="image/png" href="https://cdn.mbiz.in/base/icon-192.png">
-    <link rel="apple-touch-icon" href="https://cdn.mbiz.in/base/icon-192.png">
-    <meta property="og:image" content="https://cdn.mbiz.in/base/logo.webp">
 	
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
-            --primary: #FF9933;   /* भगवा */
-            --secondary: #138808; /* हिरवा */
-            --blue: #000080;      /* नेव्ही ब्लू */
+            --primary: #FF9933;   
+            --secondary: #138808; 
+            --blue: #000080;      
             --dark: #333;
         }
 
@@ -108,16 +105,14 @@
             <i class="fas fa-map-marked-alt"></i>
         </div>
         <h1>404</h1>
-        <h2>पेज सापडले नाही!</h2>
-        <p>क्षमस्व, आपण शोधत असलेले पेज अस्तित्वात नाही किंवा ते काढून टाकण्यात आले आहे. कृपया मुख्यपृष्ठावर जाण्यासाठी खालील बटणावर क्लिक करा.</p>
+        <h2>404 Not Found</h2>
+        <p>Page not found! The page you're looking for can't be found. The requested URL was not found on this server. </p>
         
-        <a href="https://mbiz.in/" class="btn-home">
-            <i class="fas fa-home"></i> मुख्यपृष्ठावर जा
+        <a href="https://healthmarathi.com/" class="btn-home">
+            <i class="fas fa-home"></i>Home
         </a>
 
-        <div class="footer-logo">
-            Grampanchayat<span>.Online</span>
-        </div>
+       
     </div>
 
 </body>
